2007-04-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #4957: CSV export stop exporting a field when there is a linebreak. Thanks for Oliver Klee for the idea and solution.
	* !!! t3lib_div::cvsValues() now exports like RFC 4180 (embedded line-breaks allowed)

2007-04-28  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #3649: Call to a member function formWidth() on object $GLOBALS['TBE_TEMPLATE'] instead on $GLOBALS['SOBE']. Thanks to Chi Hoang for supplying a patch.

2007-04-28  Ingo Renner  <typo3@ingo-renner.com>

	* Fixed bug #1290: TCEFORM.table.field.linkTitleToSelf-Option could be confusing
	* !!! Removed option ->TCEFORM_confObj:linkTitleToSelf.returnUrl = 1 as it seemed unlogical not to use it
	* Fixed bug #3993: Missing error message for big uploaded files - A message is there but it wasn't useful, changed it to something more understandable
	* Added a link to typo3.org/community and a list of the authors from installed extensions to the the about page (Help->About)
	* Fixed bug #2516: Constants and Setup are switched in select field in TS object browser

2007-04-28  Michael Stucki  <michael@typo3.org>

	* Fixed bug in class.em_terconnection.php: Need to base64_encode upload data for some NuSOAP implementations (patch by Karsten Dambekalns)
	* Fixed bug #1474: Check if session_support is enabled in PHP or output a warning message in the Install Tool (patch by Ingo Schmitt)

2007-04-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5519: EM - Some input fields don't have real labels yet (patch by Oliver Klee)

2007-04-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Change default date formatting of CE header to be localized (needs compat version of 4.2)
	* Add "address" to the list of allowed tags of parseFuncs (needs compat version of 4.2)
	* Fixed bug #5522: 1-2-3 wizard does not accept host name with socket option

2007-04-27  Michael Stucki  <michael@typo3.org>
